--- a/teach.html
+++ b/teach.html
@@ -19,7 +19,7 @@
       <li> Teaching and Learning Upgrade 版(付費)會議人數上限 <i>250 人</i></li>
       <li style="background-color: yellow;"> Google Meet使用教學：日曆排程、會議開啟、會議管理、分享螢幕</li>
     </ul>
-    <h2>Zuvio<a href="zuvio.jpg"
+    <h2>Zuvio<a href="https://www.zuvio.com.tw/"><img src="zuvio.jpg">
 
           alt="" style="width: 63px; height: 63px;"></a>雲端即時互動系統(推薦)：使用說明</h2>
     <hr>
