--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ by class
   {p class="right_side"}
 </style> </head>
   <body>
-    <h1><a href="https://www.ntub.edu.tw/index.php" title="¥x¥_°Ó·~¤j¾Ç">¥x¥_°Ó·~¤j¾Ç</a></h1>
-    <p id="p1"><a href="teach.html">»·¶Z±Ğ¾Ç¤è¦¡</a></p>
+    <h1><a href="https://www.ntub.edu.tw/index.php" title="å°åŒ—å•†æ¥­å¤§å­¸">å°åŒ—å•†æ¥­å¤§å­¸</a></h1>
+    <p id="p1"><a href="teach.html">é è·æ•™å­¸æ–¹å¼</a></p>
     <h2>My First CSS Example</h2>
     <p id="p2">This is a paragraph.</p>
   </body>
